refactor: segregated interfaces
